# stitch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  server.py
cloudflare-d1-server/: bak.wrangler.jsonc  package-lock.json  package.json  wrangler.toml
cloudflare-d1-server/src/: index.ts  openapi.ts
python-server/: pyproject.toml  server.py
stitch-server/: build.js  package-lock.json  package.json  tsconfig.json  wrangler.toml
stitch-server/src/: index.ts  openapi.ts
stitch-ui/: .gitignore  README.md  load-context.ts  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  worker-configuration.d.ts  wrangler.toml
stitch-ui/app/: root.tsx  tailwind.css
stitch-ui/app/clients/: d1.ts  local.ts  rest.ts  types.ts
stitch-ui/app/components/: APIKeyItem.tsx  AccessTab.tsx  ActivityChart.tsx  ClientOnly.tsx  CloseIcon.tsx  CommandPalette.tsx  DeveloperCard.tsx  DirectedGraph.tsx  DocumentContent.tsx  DocumentPanel.tsx  DocumentsTab.tsx  FileIcons.tsx  JsonViewer.tsx  KeyboardShortcuts.tsx  LeafletMap.tsx  MainContent.tsx  PostComposer.tsx  SettingsModal.tsx  Sidebar.tsx  ThemeContext.tsx  ThemeToggle.tsx  ThreadActionsContext.tsx  ThreadActionsMenu.tsx  ThreadComposer.tsx  ThreadHeader.tsx  ThreadList.tsx  ThreadPostList.tsx  ThreadSettingView.tsx  ThreadShareURL.tsx  ThreadTabBar.tsx  (+3 more)
thread/: index.html  package-lock.json  package.json
thread-again/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wrangler.toml
thread-again/app/: entry.server.tsx
thread/src/: App.svelte  app.css
(+40 files in other folders)
